// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create snapshot should render and match the snapshot for adding an item 1`] = `
.emotion-2 {
  display: block;
  margin-bottom: 15px;
}

.emotion-0 {
  position: relative;
}

<div>
  <h1>
    Add
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
          type="datetime-local"
          value=""
        />
      </div>
    </label>
    <label
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          className="form-control"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
          step="any"
          type="number"
          value=""
        />
      </div>
    </label>
    <label
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <textarea
          className="form-control"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
          value=""
        />
      </div>
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Create snapshot should render and match the snapshot for editing an item 1`] = `
.emotion-2 {
  display: block;
  margin-bottom: 15px;
}

.emotion-0 {
  position: relative;
}

<div>
  <h1>
    Edit
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
          type="datetime-local"
          value=""
        />
      </div>
    </label>
    <label
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          className="form-control"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
          step="any"
          type="number"
          value=""
        />
      </div>
    </label>
    <label
      className="emotion-2 emotion-3"
    >
      <div
        className="form-group emotion-0 emotion-1"
      >
        <div
          className="label-wrapper"
        >
          <label
            className="label-form-control"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <textarea
          className="form-control"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          placeholder={undefined}
          value=""
        />
      </div>
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
